[package]
name = "gotham"
version = "0.5.0-rc.1" # Alter html_root_url in lib.rs also
authors = ["Shaun Mangelsdorf <s.mangelsdorf@gmail.com>",
          "Colin Bankier <colinbankier@gmail.com>",
          "Isaac Whitfield <iw@whitfin.io>",
          "Judson Lester <nyarly@gmail.com>",
          "Bradley Beddoes <bradleybeddoes@gmail.com>"]
description = "A flexible web framework that promotes stability, safety, security and speed."
license = "MIT/Apache-2.0"
homepage = "https://gotham.rs"
repository = "https://github.com/gotham-rs/gotham"
readme = "README.md"
categories = ["web-programming::http-server"]
keywords = ["http", "async", "web", "framework", "server"]
edition = "2018"

[features]
default = ["rustls"]
rustls = ["tokio-rustls"]

[dependencies]
log = "0.4.8"
hyper = "0.13.6"
serde = "1.0.114"
serde_derive = "1.0.114"
bincode = "1.3.1"
mime = "0.3.16"
# Using alpha version of mime_guess until mime crate stabilizes (releases 1.0).
# see https://github.com/hyperium/mime/issues/52
mime_guess = "2.0.3"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
bytes = "0.5.5"
mio = "0.7.0"
borrow-bag = { path = "../misc/borrow_bag", version = "1.0" }
percent-encoding = "2.1.0"
pin-project = "0.4.22"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.13"
base64 = "0.12.3"
rand = "0.7.3"
rand_chacha = "0.2.2"
linked-hash-map = "0.5.3"
num_cpus = "1.13.0"
regex = "1.3.9"
cookie = "0.14.1"
http = "0.2.1"
httpdate = "0.3.2"
failure = "0.1.8"
itertools = "0.9.0"
tokio-rustls = { version = "0.14.0", optional = true }

[dev-dependencies]
gotham_derive = { path = "../gotham_derive" }

[badges]
travis-ci = { repository = "gotham-rs/gotham", branch = "master" }
